<resources>
    <string name="app_name">微信</string>
    <string name="action_search">查找</string>
    <string name="action_add">添加</string>
    <string name="menu_group_chat">发起群聊</string>
    <string name="menu_feddback">意见反馈</string>
    <string name="menu_addfriend">添加朋友</string>
    <string name="menu_scan">扫一扫</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_find">发现</string>
    <string name="tab_me">我</string>
</resources>
