<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/actionbar_search_icon"
        android:title="@string/action_search"
        android:showAsAction="ifRoom|collapseActionView"
        />

    <!--<item
        android:id="@+id/action_add"
        android:icon="@drawable/actionbar_add_icon"
        android:title="@string/action_add"
        app:showAsAction="ifRoom|collapseActionView"/>-->

    <item
        android:id="@+id/action_group_chat"
        android:background="#ff000000"
        android:icon="@drawable/menu_group_chat_icon"
        android:title="@string/menu_group_chat"
        android:showAsAction="never"/>

    <item
        android:id="@+id/action_add_friend"
        android:icon="@drawable/menu_add_icon"
        android:title="@string/menu_addfriend"
        android:showAsAction="never"/>

    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/men_scan_icon"
        android:title="@string/menu_scan"
        android:showAsAction="never"/>

    <item
        android:id="@+id/action_feedback"
        android:icon="@drawable/menu_feedback_icon"
        android:title="@string/menu_feddback"
        android:showAsAction="never"/>

</menu>